--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -65,6 +65,9 @@
       box-shadow: -27px 27px $blue;
       width: 113%;
     }
+    h3 {
+      color: white;
+    }
     .blog-post {
       margin-top: -17em;
       p, {
