--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -4,6 +4,10 @@
   height: 60vh;
 }
 
+body {
+    position: relative;
+}
+
 .contact-head {
   h2 {
     display: flex;
@@ -48,17 +52,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100%;
-  width: 100%;
-  position: relative;
+  position: absolute;
   background-color: $green;
-  bottom: 11em;
-  right: -10em;
+  bottom: 5em;
+  right: 0;
   margin: 0 2em;
-  .positioning {
-    top: -250px;
-    right: -240px;
-  }
+  // .positioning {
+  //   top: -250px;
+  //   right: -240px;
+  // }
 
   .email-name {
     display: flex;
