--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -5,7 +5,8 @@
 }
 
 body {
-    position: relative;
+  position: relative;
+    height: 100vh;
 }
 
 .contact-head {
@@ -14,7 +15,7 @@ body {
     width: 87%;
     flex-direction: row;
     justify-content: center;
-    padding-top: 2.5em;
+    padding-top: 1em;
     padding-left: 3em;
   }
 }
@@ -49,12 +50,13 @@ body {
 }
 
 .contactForm {
+  display: nonw;
   display: flex;
   flex-direction: column;
   align-items: center;
   position: absolute;
   background-color: $green;
-  bottom: 5em;
+  top: 21rem;
   right: 0;
   margin: 0 2em;
   // .positioning {
